# csen-174-s26-team-project-ttstt

./: .cursorrules  .gitignore  README.md
apps/: __init__.py
apps/api/: .env.example  README.md  pyproject.toml
apps/api/mumble_assistant_api/: __init__.py  main.py
apps/api/tests/: test_health.py
apps/bot/: __init__.py  discord_voice.py  transcription.py
architecture/: architecture.md
docs/: ai-learning-journal.md  product-vision.md  sprint-1-testing.md
infra/: README.md  docker-compose.yml
prototypes/dana/prototype/: README.md
prototypes/dana/prototype/apps/cli/: .env.example  requirements.txt  run  transcribe.py
prototypes/diego/: .env.example  README.md
prototypes/diego/backend/: main.py  requirements.txt
prototypes/diego/discord_bot/: azure_tts.py  bot.py  requirements.txt
prototypes/diego/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
prototypes/diego/frontend/src/: App.tsx  index.css  types.ts
prototypes/diego/frontend/src/components/: ChatMessage.tsx  ChatPanel.tsx  Icons.tsx  IntroScreen.tsx  OverlayDemo.tsx  RecordButton.tsx  TextInput.tsx  VoicePicker.tsx
prototypes/noelle/: README.md  requirements.txt
prototypes/noelle/bot/: audio_pipeline.py  deepgram_client.py  main.py  webhook_sender.py
unittests/: test_asr_error_handling_future.py  test_asr_silence_handling_future.py  test_bridge_routing_future.py  test_discord_voice_connection_future.py  test_retry_policy_future.py  test_transcription_future.py  test_tts_chunking_future.py  test_tts_provider_error.py  test_tts_voice_preference_future.py
(+2 files in other folders)
